# exceldiffrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
ai-docs/: initial-conversation.md
src/: differ.rs  excel_reader.rs  lib.rs  main.rs  reader.rs  writer.rs
