[package]
name = "exceldiff"
version = "0.1.0"
edition = "2021"
authors = ["Johan <mumasoft@github>"]
description = "A tool to compare two Excel worksheets and highlight differences with color-coded output"
license = "MIT"
build = "build.rs"

[[bin]]
name = "exceldiff"
path = "src/main.rs"

[dependencies]
calamine = "0.26"
rust_xlsxwriter = "0.82"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
